# MadnessEngine

./: CMakeLists.txt  README.md  TokyoDark_copy2.icls  app_types.c  app_types.h  application.c  application.h  editor_app.c  editor_app.h  editor_application.c  editor_entry.c  editor_entry.h  entry_editor.c  entry_editor.h  entry_game.c  entry_game.h  game_application.c  game_entry.c  game_entry.h  main.c  renderer_application.c  renderer_dev.c  renderer_dev.h  renderer_dev_application.c  renderer_entry.c  renderer_entry.h  unity_build.c  unity_build_editor.c  unity_build_game.c  unity_build_madness_pulse.c  unity_build_renderer.c  unity_build_tetris.c
MadnessPulse/: build_madness.c  build_madness.h  game_abilties.h  game_constants.h  game_enums.h  game_luts.h  game_structs.h  madness_pulse_app.c  madness_pulse_app.h  madness_pulse_entry.c  madness_pulse_entry.h  madness_pulse_type.h  save_game.h
MadnessPulse/AI/: Game_AI.h  madness_ai.h
MadnessPulse/abilities/: ability_list.h  asd.csv
MadnessPulse/ability/: ability.h  ability_creation.h  ability_creation_debug.h
MadnessPulse/ability_components/: abilities.h  ability.h  ability_adder.h  ability_creation.h  ability_registry.h  ability_remove.h  ability_remove_all.h  action_add.h  action_remove.h  action_trade.h  charge.h  conditional.h  conjure.h  conjure_summoner.h  damage.h  drain.h  drain_all.h  drain_percent.h  heal.h  heal_percent.h  heal_setter.h  heal_to_full.h  mp_adder.h  mp_full.h  mp_remove.h  mp_zero.h  summoner.h
MadnessPulse/action/: Action.h
MadnessPulse/assets/: asset_list.h
MadnessPulse/command/: command.h
MadnessPulse/game_mode/: ability_handler.h  madness_pulse_game.c  madness_pulse_game.h  overflow_handler.h  targeting.c  targeting.h  targeting_handler.c  targeting_handler.h  turn_based_game.c  turn_based_game.h
MadnessPulse/game_serialization/: game_levels.h  save_game.c  save_game.h
MadnessPulse/missions/: mission.h
MadnessPulse/unit_component/: BattleTurnInformation.h  actions.h  actions_component.h  augments.h  charge_list.h  conjure_death_list.h  conjure_death_list_component.h  health.c  health.h  health_component.h  inventory.h  inventory_battle.h  inventory_select.h  mp.h  overflow.h  resistant_stat.h  reversal_list.h  special_ability_flags.h  status_stat_component.h  unit_base.h
Tetris/: Tetris.c  Tetris.h  tetris_app.c  tetris_app.h  tetris_build.c
core/: asserts.h  bits.h  build_core.c  build_core.h  c_string.c  c_string.h  color_asci.c  color_asci.h  core_unit_test_main.c  core_unity.c  defines.h  event.h  id_gen.h  input.h  logger.c  logger.h  math_lib.h  math_types.h  memory_tracker.h  misc_util.h  mmath.h  unit_test.c  unit_test.h
core/compiler/: compiler.c  compiler.h  compiler_test_file.h  madness_lexer.c  madness_lexer.h  reflection.h  reflection_system.c  reflection_system.h  shader_test_file.madnessshader
core/dsa/: _allocator_interface.c  _allocator_interface.h  allocator.c  allocator.h  allocator_freelist.c  allocator_freelist.h  allocator_heap.c  allocator_heap.h  allocator_malloc.h  allocator_pool.c  allocator_pool.h  allocator_segregated_list.h  allocator_stack.c  allocator_stack.h  allocator_tagged_frame.h  arena.c  arena.h  arena_freelist.c  arena_freelist.h  arena_freelist_attempt.h  arena_pool.c  arena_pool.h  arena_stack.c  arena_stack.h  array.c  array.h  array_freelist.c  array_freelist.h  array_macro.c  array_macro.h  array_new.c  array_new.h  b_tree_red_black.c  b_tree_red_black.h  binary_tree.c  binary_tree.h  darray.c  darray.h  darray_macro.c  darray_macro.h  (+29 more)
core/maths/: AABB.h  bezier.h  cglm_include.h  math_lib.h  math_types.h  planes.h  ray.h  sphere.h  transforms.c  transforms.h  triangle.h  triangles.h
core/memory/: memory_system.c  memory_system.h  memory_tracker.c  memory_tracker.h
core/platform/: audio.c  audio.h  clock.c  clock.h  event.c  event.h  filesystem.c  filesystem.h  filesystem_linux.c  filesystem_win32.c  gamepad.h  gamepad_linux.c  gamepad_win32.c  hot_reload.h  input.c  input.h  job_system.c  job_system.h  platform.h  platform_linux.c  platform_win32.c  thread_linux.c  thread_madness.h  thread_win32.c
core/serialization/: UUID.c  UUID.h  data_registry.h  file_serialization.c  file_serialization.h  (+7 more)
dsa/: arena.h  arena_freelist.h  arena_pool.h  array.h  binary_tree.h  darray.h  dsa_utility.h  hash_map.h  hash_set.h  queue.h  stack.h  str.c  unions.h
editor/: build_editor.c  build_editor.h  editor.c  editor.h
engine/: application.c  asserts.h  defines.h  entry.c  entry.h  game.c  game.h  game_types.h  main.c  platform_linux.c  platform_win32.c  stb_truetype.h
game/: game.c  game.h  game_unity.c  generic_enums.h
lib/: build_lib.c  clay.h  ft2build.h  miniaudio.c  msdf.h  msdf_impl.c
platform/: clock.h  gamepad.h  hot_reload.h  platform.h  platform_linux.c  platform_win32.c
renderer/: Insanity_UI.c  Insanity_UI.h  Mesh.h  Renderer.cpp  Renderer_old.c  Renderer_old.h  Tetris.h  UI.c  UI.h  build_renderer.c  build_renderer.h  camera.c  camera.h  debug_draw.h  lights.c  lights.h  mesh.c  mesh.h  mesh_system.c  mesh_system.h  new_renderer.txt  particle_system.c  particle_system.h  render_main.c  render_resource_backend.c  render_resource_backend.h  renderer.c  renderer.h  renderer_packet.c  renderer_packet.h  renderer_unity.c  shader_system.c  shader_system.h  shadow_spot_light.vert  sprite.c  sprite.h  spv_reflect.c  spv_reflect.h  text.c  text.cpp  (+33 more)
resource/: UI_3D.h  asset_converter.c  asset_converter.h  asset_manager.h  asset_registry.h  asset_serialization.h  asset_system.c  asset_system.h  build_resource.c  build_resource.h  insanity_ui.c  insanity_ui.h  madness_asset_loader.h  material_system.c  material_system.h  material_types.h  mesh_system.c  mesh_system.h  particle_system.c  particle_system.h  resource_import_types.h  resource_system.c  resource_system.h  resource_types.h  scene.c  scene.h  shader_creation_system.c  shader_creation_system.h  sprite_system.c  sprite_system.h  sprite_type.h  texture_system.c  texture_system.h  ui_insanity.c  ui_insanity.h  ui_madness.c  ui_madness.h  ui_types.h
(+147 files in other folders)
